@@ -4,11 +4,6 @@
  ****************************************************************************/
 #include "Biostrings.h"
 
-typedef struct startend {
-	int start;
-	int end;
-} StartEnd;
-
 static int debug = 0;
 
 SEXP Biostrings_debug_IntIntervals()
@@ -22,9 +17,16 @@ SEXP Biostrings_debug_IntIntervals()
 	return R_NilValue;
 }
 
-/*
+
+/****************************************************************************
  * Check and simplify user-specified values 'start', 'end', 'width'.
  */
+
+typedef struct startend {
+	int start;
+	int end;
+} StartEnd;
+
 static StartEnd uSEW_to_StartEnd(int start, int end, int width)
 {
 	StartEnd startend;
@@ -149,20 +151,105 @@ SEXP narrow_IntIntervals(SEXP x, SEXP start, SEXP end, SEXP width)
 SEXP int_to_adjacent_intervals(SEXP x)
 {
 	SEXP ans;
-	int nseq, i, *x_elt, *ans_elt0, *ans_elt1;
+	int x_length, i, *x_elt, *ans_elt0, *ans_elt1;
 
-	nseq = LENGTH(x);
-	PROTECT(ans = NEW_INTEGER(nseq));
-	if (nseq >= 1)
+	x_length = LENGTH(x);
+	PROTECT(ans = NEW_INTEGER(x_length));
+	if (x_length >= 1)
 		INTEGER(ans)[0] = 1;
-	if (nseq >= 2)
+	if (x_length >= 2)
 		for (i = 1, x_elt = INTEGER(x),
 			    ans_elt0 = INTEGER(ans),
 			    ans_elt1 = INTEGER(ans)+1;
-		     i < nseq;
+		     i < x_length;
 		     i++, x_elt++, ans_elt0++, ans_elt1++) {
 			*ans_elt1 = *ans_elt0 + *x_elt;
 		}
+	UNPROTECT(1);
+	return ans;
+}
+
+
+/****************************************************************************
+ * Normalization
+ */
+
+static InterBuf normalized_intervals;
+static int max_end, inframe_offset;
+
+static void add_to_normalized_intervals(int start, int width)
+{
+	int buf_length, end, gap;
+
+	buf_length = normalized_intervals.start.count;
+	end = start + width - 1;
+	if (buf_length == 0 || (gap = start - max_end - 1) > 0) {
+		_InterBuf_insert_at(&normalized_intervals, buf_length, start, width);
+		if (buf_length == 0)
+			inframe_offset = start - 1;
+		else
+			inframe_offset += gap;
+		max_end = end;
+		return;
+	}
+	if (end <= max_end)
+		return;
+	normalized_intervals.width.vals[buf_length - 1] += end - max_end;
+	max_end = end;
+	return;
+}
+
+static void normalize_intervals(int length, const int *start, const int *width, int *inframe_start)
+{
+	int i, j;
+	IBuf start_order;
+
+	_IBuf_init(&start_order, length, 0);
+	get_intorder(length, start, start_order.vals);
+	_InterBuf_init(&normalized_intervals, 0, 0);
+	for (i = 0; i < length; i++) {
+		j = start_order.vals[i];
+		add_to_normalized_intervals(start[j], width[j]);
+		if (inframe_start != NULL)
+			inframe_start[j] = start[j] - inframe_offset;
+	}
+	return;
+}
+
+/*
+ * --- .Call ENTRY POINT ---
+ */
+SEXP normalize_IntIntervals(SEXP x, SEXP with_inframe_start)
+{
+	int x_length;
+	const int *x_start, *x_width;
+	SEXP ans, ans_names, ans_inframe_start;
+	int *inframe_start;
+
+	x_length = _get_IntIntervals_length(x);
+	x_start = _get_IntIntervals_start(x);
+	x_width = _get_IntIntervals_width(x);
+	if (LOGICAL(with_inframe_start)[0]) {
+		PROTECT(ans_inframe_start = NEW_INTEGER(x_length));
+		inframe_start = INTEGER(ans_inframe_start);
+	} else {
+		inframe_start = NULL;
+	}
+	normalize_intervals(x_length, x_start, x_width, inframe_start);
+
+	PROTECT(ans = NEW_LIST(3));
+	PROTECT(ans_names = NEW_CHARACTER(3));
+	SET_STRING_ELT(ans_names, 0, mkChar("start"));
+	SET_STRING_ELT(ans_names, 1, mkChar("width"));
+	SET_STRING_ELT(ans_names, 2, mkChar("inframe.start"));
+	SET_NAMES(ans, ans_names);
+	UNPROTECT(1);
+	SET_ELEMENT(ans, 0, _IBuf_asINTEGER(&(normalized_intervals.start)));
+	SET_ELEMENT(ans, 1, _IBuf_asINTEGER(&(normalized_intervals.width)));
+	if (inframe_start != NULL) {
+		SET_ELEMENT(ans, 2, ans_inframe_start);
+		UNPROTECT(1);
+	}
 	UNPROTECT(1);
 	return ans;
 }
