@@ -6,8 +6,9 @@
 o Added the trim() function for trimming the "out of limits"
   views of a BStringViews object.
 
-o Added the intToIntervals(), intToAdjacentIntervals(), restrict(), and
-  narrow() functions for creating or modifying IntIntervals objects.
+o Added the intToIntervals(), intToAdjacentIntervals(), restrict(), narrow()
+  and normalize() utility functions for creating or modifying IntIntervals
+  objects.
 
 o Added the chartr() generic function with a method for BString objects.
   Methods for other types of objects (in particular for BStringViews and
